# DIY-CNC

./: .cproject  .gitignore  .gitmodules  .project  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/SDManager/: SDManager.cpp  SDManager.h
main/bb_spi_lcd/: bb_parallel.cpp  bb_spi_lcd.cpp  bb_spi_lcd.h  fonts.h
main/servo/: servoControl.cpp  servoControl.h
main/stepper/: StepperMotor.cpp  StepperMotor.h
tools/W806/projects/SDK_Project/project/CDK_WS/.cdk/: refactoring.db
tools/W806/projects/SDK_Project/project/CDK_WS/W806_SDK/: W806_SDK.cdkproj
